	  includes nano.h and nano.h includes limits.h. (DLR)
	- Add a func_key flag to the low-level input functions and the
	  currently existing high-level input functions, to indicate
	  extended keypad values.  This is needed for UTF-8 support.
	  Changes to get_kbinput(), get_translated_kbinput(),
	  get_shortcut(), get_edit_input(), etc. (DLR)
- files.c:
  do_insertfile()
	- Readd the NANO_SMALL #ifdef around the start_again: label to
	  avoid a warning. (DLR)
	- Simplify by reusing variables where possible. (DLR)
- global.c:
  shortcut_init()
	- Remove redundant NANO_SMALL #ifdef. (DLR)
	- Change an erroneous _() around the "New Buffer" string to
	  N_(). (DLR)
- nano.c:
  die_save_file()
	- Clarify the error message when there are too many backup files
	  and the current one can't be written. (DLR)
  help_init()
	- Rework to be a bit more flexible.  Only add tabs for shortcut
	  key entries if those entries exist, and if there's only one
	  entry left but there's room for more than one, add enough tabs
	  to put that entry at the end.  These changes allow e.g. the
	  miscellaneous meta key sequence to be displayed in a shortcut
	  that has a control key, a primary meta key sequence, and a
	  miscellaneous meta key sequence, but no function key. (DLR)
  justify_format()
	- For more compatibility with Pico, remove extra space after a
	  character in punct if that character is the same as the one
	  before it.  For example, with the default values of punct and
	  brackets, only one space will be left after "...". (DLR)
  do_para_begin(), do_para_end()
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
  breakable(), break_line()
	- Make goal a ssize_t instead of an int, since fill is now a
	  ssize_t, and the position at which a line is broken can be
	  greater than COLS. (DLR)
- nano.h:
	- Add WIDTH_OF_TAB #define, containing the default width of a
	  tab. (DLR)
- rcfile.c:
  parse_rcfile()